         for each call but it must return the same instance, otherwise the Python objects cannot be notified when the C++ object
         has been destroyed)
+ Allow drag'n'drop for files coming from ZIP files
+ More intuitive handling of property editor

Version: V0.5B7 Date: Thu May 18 16:37:30 2006 +++++++++++++++++++++++++++++++
+ added spins to edit line width and point size in display dialog
+ Optimized SoFCMeshNode for huge handling of huge meshes
+ Prepend SoCallback node to log all traversing actions (only for debugging)
+ command for toggling clipping plane
+ command for freezing view positions
+ added new ViewProvider for meshes with more than 100.000 triangles using SoFCMeshNode for optimizations
+ save/restore of view providers into/from a separate XML file in a project file
+ check if project file exists when loading from command line
+ using grid to speed up cutting algoritm for huge meshes
+ calculate inverse color of mesh color for open edges 
+ added project properties to App::Document
+ added material property class
+ allow to disable notification of property container when a property has changed its value
+ added dialog to show and set project information
+ start moving display relevant properties from DocumentObject (data) classes to the associated ViewProvider (view) classes
+ reimplemented dialogs DlgDisplayPropertiesImp and DlgMaterialPropertiesImp
+ added ViewProvider class for Python 
+ separate data and view properties and show in different tabs in the editor
+ new methods added to Gui::DocumentPy to get active object and object by name
+ add only required Inventor nodes to all ViewProvider subclasses and removed from ViewProviderDocumentObject
+ use an additional STL vector to preserve the creation order of objects
+ added a group class for document objects and its view provider
+ added PropertyPartShape to save/load shapes to/from a document
+ rename document member in SoFCSelection after a document has been renamed